--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "description": "The user service for JobsInGhana backend",
   "type": "commonjs",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^18.7.16",
+    "nodemon": "^2.0.19",
     "ts-node": "10.9.1",
     "typescript": "4.8.3"
   },
   "dependencies": {
     "apollo-server-express": "^3.10.2",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "graphql": "^16.6.0",
+    "graphql": "15.8.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
     "typeorm": "0.3.9"
   },
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "build": "npx tsc",
     "start": "node dist/server.js"
